<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="action_settings">Settings</string>
    <string name="statistics">Statistics</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="rockBtn">Rock</string>
    <string name="paperBtn">Paper</string>
    <string name="scissorsBtn">Scissors</string>
    <string name="youLabel">You</string>
    <string name="computerLabel">Computer</string>
    <string name="choosePlayLabel">Choose rock, paper or scissors.</string>
    <string name="gameLabel">Who won?</string>

    <string name="tied">You Tied!</string>
    <string name="youWon">You Won!</string>
    <string name="computerWon">Computer Won!</string>
    <string name="youImage">You Image</string>
    <string name="compImage">Comp Image</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="game_play">Game Play</string>
    <string name="optSaveGame">Save game on close</string>
    <string name="optDarkTheme">Dark Theme</string>
    <string name="appearance">Appearance</string>


    <string name="recordMin">Record in the last Minute (W-L-T)</string>
    <string name="allTimeRecord">All Time Record (W-L-T)</string>
    <string name="resetStats">Reset stats</string>
    <string name="recordStats">0-0-0</string>
    <string name="allTimeStats">0-0-0</string>
    <string name="resetBtn">Reset</string>
    <string name="statsLabel">Statistics</string>
    <string name="settingLabel">Settings</string>

    <string name="keepPlaying">Keep playing I know you want to</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->


</resources>