<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp">

        <Button
            android:id="@+id/rockBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#DA7373"
            android:text="@string/rockBtn" />

        <Button
            android:id="@+id/paperBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#D6CD7E"
            android:text="@string/paperBtn" />

        <Button
            android:id="@+id/scissorsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/scissorsBtn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:id="@+id/chooseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/choosePlayLabel"
        android:textSize="26sp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/computerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="141dp"
        android:text="@string/computerLabel" />

    <TextView
        android:id="@+id/youTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="141dp"
        android:text="@string/youLabel" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>